# platform.core.uifw.libscl-ui

./: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE.Flora  NOTICE  README  libscl-ui.pc.in  project.config
binary_xmlresource/: autopopup_configure_bin_parser.cpp  binary_xmlresource.cpp  default_configure_bin_parser.cpp  file_storage.cpp  input_mode_configure_bin_parser.cpp  key_coordinate_frame_bin_parser.cpp  label_properties_bin_parser.cpp  layout_bin_parser.cpp  magnifier_configure_bin_parser.cpp  metadata_bin_parser.cpp  modifier_decoration_bin_parser.cpp  nine_patch_file_list_bin_parser.cpp  string_bin_parser.cpp
binary_xmlresource/include/: _auto_metadata.h  autopopup_configure_bin_parser.h  binary_xmlresource.h  default_configure_bin_parser.h  file_storage.h  file_storage_impl.h  input_mode_configure_bin_parser.h  key_coordinate_frame_bin_parser.h  label_properties_bin_parser.h  layout_bin_parser.h  magnifier_configure_bin_parser.h  metadata.h  metadata_bin_parser.h  metadata_provider.h  modifier_decoration_bin_parser.h  nine_patch_file_list_bin_parser.h  parserinfo_provider.h  string_bin_parser.h  string_collector.h  string_provider.h
binary_xmlresource/include/interface/: imetadata_provider.h  iparserinfo_provider.h  istring_collector.h  istring_provider.h
packaging/: libscl-ui.spec
res/: put_record.h  sclresource.cpp  sclresource.h  sclresourcekeys.h  simple_debug.cpp  simple_debug.h  simple_debug_test.cpp  timer.cpp  timer.h
scl/: sclactionstate.cpp  sclanimator.cpp  sclcontext.cpp  sclcontroller.cpp  scldebug.cpp  scleffect.cpp  sclerroradjustment.cpp  scleventhandler.cpp  sclevents.cpp  sclfeedback.cpp  sclfontproxy.cpp  sclgraphics.cpp  sclgwes.cpp  sclimageproxy.cpp  sclkeyfocushandler.cpp  sclresourcecache.cpp  sclui.cpp  scluibuilder.cpp  scluiimpl.cpp  sclutils.cpp  sclwindows.cpp
scl/gwes/efl/: sclanimator-efl.cpp  sclanimator-efl.h  sclevents-efl.cpp  sclevents-efl.h  sclgraphics-efl.cpp  sclgraphics-efl.h  sclwindows-efl.cpp  sclwindows-efl.h
scl/gwes/gtk/: sclevents-gtk.cpp  sclevents-gtk.h  sclgraphics-cairo.cpp  sclgraphics-cairo.h  sclgraphics-gtk.cpp  sclgraphics-gtk.h  sclwindows-gtk.cpp  sclwindows-gtk.h
scl/gwes/win32/: sclevents-win32.cpp  sclevents-win32.h  sclgraphics-win32.cpp  sclgraphics-win32.h  sclwindows-win32.cpp
scl/include/: scl.h  sclactionstate.h  sclanimator.h  sclconfig.h  sclcontext.h  sclcontroller.h  scldebug.h  sclerroradjustment.h  scleventcallback.h  scleventhandler.h  sclevents.h  sclfeedback.h  sclfontproxy.h  sclgraphics.h  sclgwes.h  sclheaders.h  sclimageproxy.h  sclkeydefines.h  sclkeyfocushandler.h  sclresourcecache.h  sclstructs.h  scltypes.h  sclui.h  scluibuilder.h  scluiimpl.h  sclutils.h  sclversion.h  sclwindows.h
scl/utils/linux/: sclutils-linux.cpp
scl/utils/win32/: sclutils-win32.cpp
sclres/: sclres.cpp  sclres.h  sclres_manager.cpp  sclres_manager.h  sclres_type.h
xml2binary/: CMakeLists.txt  encode_autopopup_configure.cpp  encode_default_configure.cpp  encode_input_mode_configure.cpp  encode_key_coordinate_frame.cpp  encode_label_properties_frame.cpp  encode_layout.cpp  encode_magnifier_configure.cpp  encode_metadata.cpp  encode_modifier_decoration.cpp  encode_nine_patch.cpp  metadata_handler.cpp  xml2dat.cpp
xml2binary/data/: auto_codes.py  metadata.xml
xml2binary/include/: _auto_metadata.h  encode_autopopup_configure.h  encode_default_configure.h  encode_input_mode_configure.h  encode_key_coordinate_frame.h  encode_label_properties_frame.h  encode_layout.h  encode_magnifier_configure.h  encode_metadata.h  encode_modifier_decoration.h  encode_nine_patch.h  imetadata_encoder.h  imetadata_helper.h  imetadata_parser.h  istring_encoder.h  metadata.h  metadata_handler.h  resource_storage.h  resource_storage_impl.h  string_encoder.h  xml2dat.h
xmlresource/: autopopup_configure_parser.cpp  default_configure_parser.cpp  input_mode_configure_parser.cpp  label_properties_parser.cpp  layout_parser.cpp  layout_parser_helper.cpp  magnifier_configure_parser.cpp  main_entry_parser.cpp  modifier_decoration_parser.cpp  nine_patch_file_list_parser.cpp  xml_parser_utils.cpp  xmlresource.cpp
xmlresource/include/: autopopup_configure_parser.h  default_configure_parser.h  input_mode_configure_parser.h  label_properties_parser.h  layout_parser.h  layout_parser_helper.h  magnifier_configure_parser.h  main_entry_parser.h  modifier_decoration_parser.h  nine_patch_file_list_parser.h  xml_parser_utils.h  xmlresource.h
